@@ -112,6 +112,7 @@
     <google.truth.version>0.40</google.truth.version>
     <hadoop.one.version>1.2.1</hadoop.one.version>
     <hadoop.two.version>2.8.3</hadoop.two.version>
+    <hadoop.three.version>3.1.0</hadoop.three.version>
     <hamcrest.version>1.3</hamcrest.version>
     <joda-time.version>2.1</joda-time.version>
     <junit.version>4.13-SNAPSHOT</junit.version>
@@ -143,6 +144,12 @@
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
+    </profile>
+    <profile>
+      <id>hadoop3</id>
+      <properties>
+        <hadoop.identifier>hadoop3</hadoop.identifier>
+      </properties>
     </profile>
     <profile>
       <id>release</id>
@@ -362,7 +369,7 @@
       </dependency>
 
       <!-- Hadoop 1 version specific dependencies -->
-      <!-- These should only be referenced from *-hadoop1.pom.xml POMS -->
+      <!-- These should only be referenced from *-hadoop1 jars -->
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-core</artifactId>
@@ -377,7 +384,7 @@
       </dependency>
 
       <!-- Hadoop 2 version specific dependencies -->
-      <!-- These should only be referenced from *-hadoop2.pom.xml POMS -->
+      <!-- These should only be referenced from *-hadoop2 jars -->
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-common</artifactId>
@@ -395,6 +402,28 @@
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-mapreduce-client-core</artifactId>
         <version>${hadoop.two.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <!-- Hadoop 3 version specific dependencies -->
+      <!-- These should only be referenced from *-hadoop3 jars -->
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-common</artifactId>
+        <version>${hadoop.three.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-common</artifactId>
+        <version>${hadoop.three.version}</version>
+        <classifier>tests</classifier>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-mapreduce-client-core</artifactId>
+        <version>${hadoop.three.version}</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
